[3360667477][fix][low] Select category doesn't show dropdown sometimes on Firefox

--- a/styles/multiselect.override.sass
+++ b/styles/multiselect.override.sass
@@ -1,5 +1,5 @@
 @-moz-document url-prefix()
     .single-select input.searchBox
         width: 0;
-        margin: 0;
-        padding: 0;
+        margin: 0 !important;
+        padding: 0 !important;
